<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:weightSum="100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textColor="@color/white"
            android:textSize="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="75"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/but_blank"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="69"
                android:backgroundTint="@color/gray"
                android:text="\t\t\t\t\t\t\t\t"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <Button
                android:id="@+id/but_delete"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="31"
                android:backgroundTint="@color/gray"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>
        <!--First Line of Button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/but_seven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="25"
                android:backgroundTint="@color/white_gray"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_eight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="25"
                android:backgroundTint="@color/white_gray"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_nine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="25"
                android:backgroundTint="@color/white_gray"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="25"
                android:backgroundTint="@color/gray"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>
        <!--Second Line of Button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white_gray"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_five"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white_gray"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_six"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white_gray"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_times"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/times"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>
        <!--Third Line of Button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white_gray"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_twe"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white_gray"
                android:text="@string/twe"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_three"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white_gray"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>
        <!--final Line of Button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_dot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white_gray"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_zero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white_gray"
                android:minHeight="90dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_equal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:minHeight="90dp"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/but_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>